objects/Review__c/Review__c.object-meta.xml
<CustomObject>
    <description>Represents an interviewer&apos;s assessment of a particular candidate.</description>
    <label>Review</label>
    <nameField>
        <displayFormat>R-{000000}</displayFormat>
        <label>Review Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>