objects/Review__c/validationRules/Rating_Scale_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Rating_Scale_Rule</fullName>
    <active>true</active>
    <description>Rating must be between 1 and 5.</description>
    <errorConditionFormula>(Rating__c &lt;1 ||  Rating__c &gt;5)</errorConditionFormula>
    <errorDisplayField>Rating__c</errorDisplayField>
    <errorMessage>Invalid Rating .Rating must be between1 and 5.</errorMessage>
</ValidationRule>